--- a/Cosplay Academy Sun/packages.config
+++ b/Cosplay Academy Sun/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BepInEx.ConfigurationManager" version="16.3.0" targetFramework="net46" developmentDependency="true" />
-  <package id="ExtensibleSaveFormat.KoikatsuSunshine" version="16.4.0" targetFramework="net46" developmentDependency="true" />
+  <package id="BepInEx.ConfigurationManager" version="16.4.0" targetFramework="net46" developmentDependency="true" />
+  <package id="ExtensibleSaveFormat.KoikatsuSunshine" version="16.7.0" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.15" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.5.4" targetFramework="net46" />
-  <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp" version="2021.5.28" targetFramework="net35" requireReinstallation="true" />
-  <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp-firstpass" version="2021.5.28" targetFramework="net35" requireReinstallation="true" />
-  <package id="IllusionLibs.KoikatsuSunshine.UniRx" version="2021.5.28" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx.MonoMod" version="21.8.5.1" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp" version="2021.8.27.2" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp-firstpass" version="2021.8.27.2" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UniRx" version="2021.8.27.2" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UniTask" version="2021.8.27.2" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.Unity.TextMeshPro" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.AnimationModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.AudioModule" version="2019.4.9" targetFramework="net46" />
@@ -14,13 +16,14 @@
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.ImageConversionModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.IMGUIModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.PhysicsModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.TextRenderingModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.UI" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.UIModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.Koikatu.Assembly-CSharp" version="2019.4.27.4" targetFramework="net35" />
   <package id="IllusionLibs.Koikatu.Assembly-CSharp-firstpass" version="2019.4.27.4" targetFramework="net35" />
   <package id="IllusionLibs.Koikatu.UnityEngine" version="5.6.2.4" targetFramework="net35" />
-  <package id="IllusionLibs.XUnity.AutoTranslator.Plugin.Core" version="4.16.0" targetFramework="net46" />
-  <package id="IllusionModdingAPI.KKSAPI" version="1.23.0" targetFramework="net46" developmentDependency="true" />
-  <package id="Sideloader.KoikatsuSunshine" version="16.4.0" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.XUnity.AutoTranslator.Plugin.Core" version="4.18.0" targetFramework="net46" />
+  <package id="IllusionModdingAPI.KKSAPI" version="1.25.0" targetFramework="net46" developmentDependency="true" />
+  <package id="Sideloader.KoikatsuSunshine" version="16.7.0" targetFramework="net46" developmentDependency="true" />
 </packages>
